Add canonical URL

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<link rel="icon" href="./assets/favicon/favicon.png" type="image/png">
 		<link rel="icon" sizes="32x32" href="./assets/favicon/favicon-32.png" type="image/png">
 		<link rel="icon" sizes="64x64" href="./assets/favicon/favicon-64.png" type="image/png">
-		<link rel="icon" sizes="96x96" href="./assets/favicon/favicon-96.png" type="image/png">
+    <link rel="icon" sizes="96x96" href="./assets/favicon/favicon-96.png" type="image/png">
+    
+    <link rel="canonical" href="https://www.provaid.com" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
