--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Trouver une mission humanitaire à l'international. Nous contruisons la plus grande plateforme de mise en relation entre volontaire et ONG. ">
     <meta name="author" content="provaid">
-    <link rel="alternate" hreflang="fr" href="https://wwww.provaid.com/index.html" > 
+    <link rel="alternate" hreflang="fr" href="https://www.provaid.com/index.html" > 
     <link rel="alternate" hreflang="en" href="#" > 
     <link rel="alternate" hreflang="es" href="#" > 
     <title>Provaid - Humanitaire et volontariat international</title>
