--- a/error/error_404.html
+++ b/error/error_404.html
@@ -8,8 +8,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="alternate" hreflang="fr" href="http://www.Provaid.com/fr/privacy-policy.html">
-        <link rel="alternate" hreflang="en" href="http://www.Provaid.com/fr/privacy-policy-en.html">
-        <link rel="alternate" hreflang="es" href="http://www.Provaid.com/fr/privacy-policy-es.html">
+        <link rel="alternate" hreflang="en" href="#">
+        <link rel="alternate" hreflang="es" href="#">
         <title>Provaid - Humanitaire et volontariat international</title>
 		<link rel="shortcut icon" href="../assets/favicon/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="../assets/favicon/favicon.png" type="image/png">
